--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   webserver:
     image: nginx:alpine
     container_name: github-api-webserver
-    working_dir: /application
+    working_dir: /var/www/api
     volumes:
-      - .:/application
+      - .:/var/www/api
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8080:80"
 
   php-fpm:
     image: falcon4ik007/php8.1-fpm:latest
-    working_dir: /application
+    working_dir: /var/www/api
     container_name: github-api-php-fpm
     volumes:
-      - .:/application
+      - .:/var/www/api
