--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,20 @@
   "name": "gorustowich/github-api-challenge",
   "description": "PHP/GitHub Api Challenge",
   "scripts": {
-
+    "create-repo": "@php bin/cli.php --action=create",
+    "delete-repo": "@php bin/cli.php --action=delete"
   },
   "require": {
     "php": "^8.1",
-    "vlucas/phpdotenv": "^5.4"
+    "vlucas/phpdotenv": "^5.4",
+    "ext-curl": "*"
   },
   "autoload": {
     "psr-4": {
-
+      "App\\": "app/",
+      "App\\Commands\\": "app/commands",
+      "App\\Enums\\": "app/enums",
+      "App\\Http\\": "app/http"
     }
   }
 }
