--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 CREATE_URL=https://api.github.com/user/repos
 DELETE_URL=https://api.github.com/repos/
+USERS_REPOS_URL=https://api.github.com/users/
 
 USER_TOKEN=
 USERNAME=
